--- a/shop.html
+++ b/shop.html
@@ -85,8 +85,8 @@
             <div class="dropdown-menu" aria-labelledby="dropdown04">
               <a class="dropdown-item" href="shop.html">Shop</a>
               <a class="dropdown-item" href="product-single.html">Product</a>
-              <a class="dropdown-item" href="cart.html">Cart</a>
-              <a class="dropdown-item" href="checkout.html">Checkout</a>
+
+
             </div>
           </li>
           <li class="nav-item">
@@ -98,9 +98,7 @@
           <li class="nav-item">
             <a href="contact.html" class="nav-link">Contact</a>
           </li>
-          <li class="nav-item cta cta-colored">
-            <a href="cart.html" class="nav-link">Cart[0]</a>
-          </li>
+
         </ul>
       </div>
     </div>
@@ -194,7 +192,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 ftco-animate">
+        <!-- <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="product">
             <a href="#" class="img-prod"><img class="img-fluid" src="images/product-3.jpg" alt="Colorlib Template" />
               <div class="overlay"></div>
@@ -221,7 +219,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="product">
             <a href="#" class="img-prod"><img class="img-fluid" src="images/product-4.jpg" alt="Colorlib Template" />
@@ -282,7 +280,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 ftco-animate">
+        <!-- <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="product">
             <a href="#" class="img-prod"><img class="img-fluid" src="images/product-6.jpg" alt="Colorlib Template" />
               <div class="overlay"></div>
@@ -309,7 +307,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="product">
             <a href="#" class="img-prod"><img class="img-fluid" src="images/product-7.jpg" alt="Colorlib Template" />
@@ -366,7 +364,7 @@
             </div>
           </div>
         </div>
-
+        <!-- 
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="product">
             <a href="#" class="img-prod"><img class="img-fluid" src="images/product-9.jpg" alt="Colorlib Template" />
@@ -397,8 +395,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-3 ftco-animate">
+        </div> -->
+        <!-- <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="product">
             <a href="#" class="img-prod"><img class="img-fluid" src="images/product-10.jpg" alt="Colorlib Template" />
               <div class="overlay"></div>
@@ -425,8 +423,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-3 ftco-animate">
+        </div> -->
+        <!-- <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="product">
             <a href="#" class="img-prod"><img class="img-fluid" src="images/product-11.jpg" alt="Colorlib Template" />
               <div class="overlay"></div>
@@ -453,7 +451,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-6 col-lg-3 ftco-animate">
           <div class="product">
             <a href="#" class="img-prod"><img class="img-fluid" src="images/product-12.jpg" alt="Colorlib Template" />
